--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -167,11 +167,11 @@
     "    ),\n",
     "    \"phenotype\": pd.Categorical(\n",
     "        [\n",
-    "            \"Mental deterioration\",\n",
-    "            \"Hyperglycemia\",\n",
-    "            \"Tumor growth\",\n",
-    "            \"Increased blood pressure\",\n",
-    "            \"Airway inflammation\",\n",
+    "            \"decreased weight\",\n",
+    "            \"increased size\",\n",
+    "            \"bent\",\n",
+    "            \"not symmetrical\",\n",
+    "            \"mislocalised\",\n",
     "        ]\n",
     "    ),\n",
     "    \"developmental_stage\": pd.Categorical(\n",
@@ -250,9 +250,7 @@
     "try:\n",
     "    curator.validate()\n",
     "except ln.errors.ValidationError as e:\n",
-    "    assert str(e).startswith(\n",
-    "        \"2 terms are not validated: 'Tumor growth', 'Airway inflammation'\"\n",
-    "    )\n",
+    "    assert str(e).startswith(\"1 term is not validated: 'not symmetrical'\")\n",
     "    print(e)"
    ]
   },
@@ -298,8 +296,7 @@
     ")\n",
     "df[\"phenotype\"] = df[\"phenotype\"].cat.rename_categories(\n",
     "    {\n",
-    "        \"Tumor growth\": phenotypes.neoplasm.name,\n",
-    "        \"Airway inflammation\": phenotypes.bronchitis.name,\n",
+    "        \"not symmetrical\": phenotypes.asymmetrical.name,\n",
     "    }\n",
     ")\n",
     "df[\"developmental_stage\"] = df[\"developmental_stage\"].cat.rename_categories(\n",
