--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -67,8 +67,10 @@
    "outputs": [],
    "source": [
     "# Get single-cell images and config\n",
-    "sc_datasets = ln.Artifact.filter(ulabels__name=\"autophagy imaging\").filter(\n",
-    "    ulabels__name=\"scportrait single-cell images\"\n",
+    "sc_datasets = (\n",
+    "    ln.Artifact.using(\"scportrait/examples\")\n",
+    "    .filter(ulabels__name=\"autophagy imaging\")\n",
+    "    .filter(ulabels__name=\"scportrait single-cell images\")\n",
     ")\n",
     "config = (\n",
     "    ln.Artifact.filter(ulabels__name=\"autophagy imaging\")\n",
@@ -108,7 +110,7 @@
     "\n",
     "# we have two different conditions which will be the two classes that our classifier should be able to tell apart\n",
     "condition_uls = [\n",
-    "    ln.ULabel.get(name=stim_name)\n",
+    "    ln.ULabel.using(\"scportrait/examples\").get(name=stim_name)\n",
     "    for stim_name in {af.features.get_values()[\"stimulation\"] for af in wt_cells_afs}\n",
     "]\n",
     "\n",
@@ -155,7 +157,6 @@
     "artifact.features.add_values(\n",
     "    {\n",
     "        \"study\": \"autophagy imaging\",\n",
-    "        \"artifact type\": \"single-cell image featurization results\",\n",
     "        \"genotype\": \"WT\",\n",
     "    }\n",
     ")"
@@ -181,7 +182,7 @@
     "\n",
     "# we have the same two conditions as before\n",
     "condition_uls = [\n",
-    "    ln.ULabel.get(name=stimulation_name)\n",
+    "    ln.ULabel.using(\"scportrait/examples\").get(name=stimulation_name)\n",
     "    for stimulation_name in {\n",
     "        af.features.get_values()[\"stimulation\"] for af in ko_cells_afs\n",
     "    }\n",
@@ -219,7 +220,6 @@
     "artifact.features.add_values(\n",
     "    {\n",
     "        \"study\": \"autophagy imaging\",\n",
-    "        \"artifact type\": \"single-cell image featurization results\",\n",
     "        \"genotype\": \"EI24KO\",\n",
     "    }\n",
     ")"
