--- a/docs/imaging4.ipynb
+++ b/docs/imaging4.ipynb
@@ -40,17 +40,29 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "import matplotlib.pyplot as plt\n",
     "import scportrait\n",
     "import seaborn as sns\n",
-    "from sklearn.metrics import confusion_matrix, roc_curve, auc\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "from anndata import concat\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import confusion_matrix, roc_curve, auc\n",
     "\n",
-    "\n",
-    "def _get_cells(dataframe):\n",
+    "ln.track()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _get_cells(dataframe: pd.DataFrame):\n",
+    "    \"\"\"Extract and concatenate single-cell data for cells specified in the input dataframe.\"\"\"\n",
     "    sc_data = None\n",
     "    for uid in dataframe.dataset.unique():\n",
     "        _selected_cells = dataframe[dataframe.dataset == uid].copy()\n",
@@ -72,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,17 +116,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = ln.ULabel.get(name=\"autophagy imaging\")\n",
+    "study = ln.ULabel.using(\"scportrait/examples\").get(name=\"autophagy imaging\")\n",
     "\n",
-    "sc_datasets = ln.Artifact.filter(ulabels=study).filter(\n",
-    "    ulabels__name=\"scportrait single-cell images\"\n",
+    "sc_datasets = (\n",
+    "    ln.Artifact.using(\"scportrait/examples\")\n",
+    "    .filter(ulabels=study)\n",
+    "    .filter(ulabels__name=\"scportrait single-cell images\")\n",
     ")\n",
-    "featurized_datasets = ln.Artifact.filter(ulabels=study).filter(\n",
-    "    ulabels__name=\"single-cell image featurization results\"\n",
+    "featurized_datasets = (\n",
+    "    ln.Artifact.using(\"scportrait/examples\")\n",
+    "    .filter(ulabels=study)\n",
+    "    .filter(ulabels__name=\"single-cell image featurization results\")\n",
     ")\n",
     "\n",
     "class_lookup = {0: \"untreated\", 1: \"14h Torin-1\"}\n",
@@ -123,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "First, lets look at some example images from our two classes. As we can see the cells look very distinct to one another. Hopefully our ML model will be able to seperate them as well."
@@ -132,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Train ML model"
@@ -179,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "Considering that it was only trained on very few input images, our classifier performs well with an AUC of 0.77. This is already much better than a random classifier which we would expect to have an AUC of 0.5.\n",
@@ -294,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,16 +368,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
-    "Looking at the False Positives (i.e. cells that look stimulated despite not having been stimulated) we can see two different types of cells\n",
-    "1. Very small cells that don't show any visible autophagosomes\n",
+    "Looking at the False Positives (i.e. cells that look stimulated despite not having been stimulated) we can see two different types of cells:\n",
+    "1. Very small cells that do not show any visible autophagosomes\n",
     "2. Larger cells that clearly show some autophagosomes\n",
     "\n",
-    "The cells of type 1 look like they are the result of our model making mistakes, but the cells of type 2 look much more similar to TP cells than TN cells. Based on literature we know that cells can under go spontaneous autophagy even in the absence of Torin-1, for example as a result of nutrient scarcity. Since our class labelling is just based on the fact that the cells have not been treated with Torin-1, we would actually be annotating these cells incorrectly. In these cases our model does not actually make a mistake, but has in fact uncovered mislabelled examples in the dataset.\n",
+    "The type 1 cells look like they are the result of our model making mistakes, but the type 2 cells look much more similar to TP cells than TN cells.\n",
+    "Based on literature, we know that cells can under go spontaneous autophagy even in the absence of Torin-1, for example, as a result of nutrient scarcity.\n",
+    "Since our class labelling is just based on cells having not been treated with Torin-1, we would be annotating these cells incorrectly.\n",
+    "In these cases our model does not make a mistake, but has in fact uncovered mislabelled examples in the dataset.\n",
     "\n",
-    "Looking at the False Negatives (i.e. cells that the model identifies as having been unstimulated despite having been stimulated) the cells appear homogenous and look more comparable to the True Positive Population. So in this case it seems our model is making a mistake. \n",
+    "Looking at the False Negatives (i.e. cells that the model identifies as having been unstimulated despite having been stimulated) the cells appear homogenous and look more comparable to the True Positive Population.\n",
+    "So in this case it seems our model is making a mistake. \n",
     "\n",
     "Before applying this model in a biological context, we would therefore probably need to invest some more time and effort into improving it! \n",
     "\n",
@@ -370,17 +390,23 @@
     "2. Perform a pre-screening of our training data to ensure we remove any incorrectly labelled cells\n",
     "3. Improve the image features we are training our model on to better reflect the biology we are interested in\n",
     "\n",
-    "If you are interested in finding out more you can check out the [original paper](https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1) for these data where the authors trained a deep learning model to classify these cells with a much higher accuracy. \n",
-    "\n",
+    "If you are interested in finding out more you can check out the [original paper](https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1) where the authors trained a deep learning model to classify these cells with a much higher accuracy. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16",
+   "metadata": {},
+   "source": [
     "## Investigate the *EI24* KO cells\n",
     "\n",
-    "Now lets take a look at the EI24-deficient cells.\n"
+    "Now lets take a look at the EI24-deficient cells."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "19",
    "metadata": {},
    "source": [
     "Interestingly, our model classifies a high percentage of stimulated *EI24*-KO cells as being unstimulated. Lets take a look at the images again."
@@ -433,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "21",
    "metadata": {},
    "source": [
     "The *EI24* KO cells have fewer LC3 puncta, and seem to show a defect in the formation of autophagosomes. Even when stimulated, *EI24* KO cells look comparable to unstimated cells. In this instance, out model appears to correctly identify the biological effect of a deficiency in the *EI24* gene."
@@ -495,16 +521,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "22",
    "metadata": {},
    "source": [
-    "## Track cells back to see them in their original context"
+    "## Trace cells back to see them in their original context"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23",
+   "metadata": {},
+   "source": [
+    "As image analysis advances, obtaining the full context of a small section of the original image is often essential."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,12 +547,16 @@
     "dataset = cell[\"dataset\"].values[0]\n",
     "cell_id = cell[\"cell_id\"].values[0]\n",
     "\n",
-    "# get spatialdata object and single-cell image dataset\n",
-    "sdata = ln.Artifact.get(\n",
-    "    key=ln.Artifact.get(dataset).key.replace(\n",
-    "        \"single_cell_data.h5ad\", \"spatialdata.zarr\"\n",
+    "# get SpatialData object and single-cell image dataset\n",
+    "sdata = (\n",
+    "    ln.Artifact.using(\"scportrait/examples\")\n",
+    "    .get(\n",
+    "        key=ln.Artifact.using(\"scportrait/examples\")\n",
+    "        .get(dataset)\n",
+    "        .key.replace(\"single_cell_data.h5ad\", \"spatialdata.zarr\")\n",
     "    )\n",
-    ").load()\n",
+    "    .load()\n",
+    ")\n",
     "single_cell_images = scportrait.io.read_h5sc(ln.Artifact.get(dataset).cache())\n",
     "\n",
     "# lookup location of cell of interest\n",
@@ -542,27 +580,19 @@
     "    y,\n",
     "    color=\"red\",\n",
     "    s=200,\n",
-    ")  # plot red dot on top of selected cell\n",
+    ")\n",
     "fig.tight_layout()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
     "ln.finish()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
