--- a/docs/imaging4.ipynb
+++ b/docs/imaging4.ipynb
@@ -588,10 +588,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "25",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "!rm -rf test-imaging\n",
+    "!lamin delete --force test-imaging"
    ]
   }
  ],
