--- a/docs/imaging2.ipynb
+++ b/docs/imaging2.ipynb
@@ -431,7 +431,7 @@
     "            \"Dataset already processed and results uploaded to instance. Skipping processing.\"\n",
     "        )\n",
     "\n",
-    "    except ln.errors.DoesNotExist:\n",
+    "    except ln.Artifact.DoesNotExist:\n",
     "        input_image_paths = [\n",
     "            input_artifacts.filter(ulabels__name=channel_name).one().cache()\n",
     "            for channel_name in [\"DAPI\", \"Alexa488\", \"mCherry\"]\n",
@@ -467,7 +467,7 @@
     "        )\n",
     "        annotation = shared_features.copy()\n",
     "        annotation[\"imaged structure\"] = [\n",
-    "            ln.ULabel.get(name=structure_name)\n",
+    "            ln.ULabel.using(\"scportrait/examples\").get(name=structure_name)\n",
     "            for structure_name in [\"LckLip-mNeon\", \"DNA\", \"mCherry-LC3B\"]\n",
     "        ]\n",
     "        artifact.features.add_values(annotation)\n",
@@ -484,8 +484,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Param(name=\"output_directory\", dtype=\"str\").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27",
    "metadata": {},
    "source": [
     "Now we are ready to process all of our input images and upload the generated single-cell image datasets back to our instance."
@@ -494,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
