--- a/docs/imaging4.ipynb
+++ b/docs/imaging4.ipynb
@@ -43,7 +43,6 @@
     "import matplotlib.pyplot as plt\n",
     "import scportrait\n",
     "import seaborn as sns\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "from anndata import concat\n",
@@ -61,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _get_cells(dataframe: pd.DataFrame):\n",
+    "def _get_cells(dataframe):\n",
     "    \"\"\"Extract and concatenate single-cell data for cells specified in the input dataframe.\"\"\"\n",
     "    sc_data = None\n",
     "    for uid in dataframe.dataset.unique():\n",
