--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -37,10 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m→\u001b[0m connected lamindb: sophiamaedler/test-imaging\n",
+      "\u001b[92m→\u001b[0m created Transform('0BSejbephVeu0000'), started new Run('gSKgBwi2...') at 2025-03-21 14:44:28 UTC\n",
+      "\u001b[92m→\u001b[0m notebook imports: bionty==1.1.2 lamindb==1.3.0 pandas==2.2.3 scportrait==1.3.2\n"
+     ]
+    }
+   ],
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5",
    "metadata": {},
    "outputs": [],
@@ -82,14 +92,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('Ug6oysO8') as input\n",
+      "\u001b[93m!\u001b[0m returning artifact with same hash: Artifact(uid='jryk1izEoNnZgzVR0000', is_latest=True, key='processed_data_imaging_use_case/U2OS_lcklip-mNeon_mCherryLC3B_clone_1/14h_Torin-1/FOV1/single_cell_data.h5ad', suffix='.h5ad', kind='dataset', otype='AnnData', size=11496192, hash='xAoThmgmywkVWC2M64xDVw', n_observations=70, space_id=1, storage_id=1, run_id=3, schema_id=5, created_by_id=1, created_at=2025-03-21 14:43:50 UTC)\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='9hHptuyb'), ULabel(uid='A2945i5P'), ULabel(uid='CrR7fgIZ'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='Ug6oysO8tredb6QD0000'), Schema(uid='DyiIpKWmc5tyOi4lnemL'), ULabel(uid='KH1brNUW'), ULabel(uid='JWE2jNdk')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('o70zxUTe') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='9hHptuyb'), ULabel(uid='A2945i5P'), ULabel(uid='KH1brNUW'), ULabel(uid='1KPobNqK'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='o70zxUTepqlHmM0B0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('TU3SzmV4') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='9hHptuyb'), ULabel(uid='A2945i5P'), ULabel(uid='GadMJgvN'), ULabel(uid='CrR7fgIZ'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='TU3SzmV402RjMAVB0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('isiPSnRq') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='9hHptuyb'), ULabel(uid='A2945i5P'), ULabel(uid='GadMJgvN'), ULabel(uid='1KPobNqK'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='isiPSnRqZv4e8bdL0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('cTQQVLEg') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='9hHptuyb'), ULabel(uid='EgihgpJC'), ULabel(uid='KH1brNUW'), ULabel(uid='CrR7fgIZ'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='cTQQVLEg3eox69LE0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('HgBdMQ3W') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='9hHptuyb'), ULabel(uid='EgihgpJC'), ULabel(uid='KH1brNUW'), ULabel(uid='1KPobNqK'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='HgBdMQ3Wxug5pdwb0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('wuBuFSsw') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='9hHptuyb'), ULabel(uid='EgihgpJC'), ULabel(uid='GadMJgvN'), ULabel(uid='CrR7fgIZ'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='wuBuFSswlyStWyLz0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('ws5uiNox') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='9hHptuyb'), ULabel(uid='EgihgpJC'), ULabel(uid='GadMJgvN'), ULabel(uid='1KPobNqK'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='ws5uiNox4ilIjCpe0000')\n"
+     ]
+    }
+   ],
    "source": [
     "# Process single-cell images with scPortrait's featurizer\n",
     "featurizer = CellFeaturizer(directory=\".\", config=config.cache(), project_location=None)\n",
-    "\n",
     "\n",
     "def featurize_datasets(artifact_list) -> pd.DataFrame:\n",
     "    paths = [dataset.cache() for dataset in artifact_list]\n",
@@ -142,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8",
    "metadata": {},
    "outputs": [],
@@ -172,10 +221,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('d4cvdSJa') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='Aj8KGwbh'), ULabel(uid='A2945i5P'), ULabel(uid='CrR7fgIZ'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='d4cvdSJa6rc6Fd9T0000'), ULabel(uid='joRCMMWX')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('JHkm31GA') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='Aj8KGwbh'), ULabel(uid='A2945i5P'), ULabel(uid='joRCMMWX'), ULabel(uid='1KPobNqK'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='JHkm31GACpCoI14g0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('FYR27nQ3') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='Aj8KGwbh'), ULabel(uid='A2945i5P'), ULabel(uid='JIbWVXma'), ULabel(uid='CrR7fgIZ'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='FYR27nQ337XCd9rk0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('rEyRiRUK') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='Aj8KGwbh'), ULabel(uid='A2945i5P'), ULabel(uid='JIbWVXma'), ULabel(uid='1KPobNqK'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='rEyRiRUKJkkBg1PI0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('cHKg1yCq') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='Aj8KGwbh'), ULabel(uid='EgihgpJC'), ULabel(uid='joRCMMWX'), ULabel(uid='CrR7fgIZ'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='cHKg1yCqvJgShsKc0001')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('tpZAX7uy') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='Aj8KGwbh'), ULabel(uid='EgihgpJC'), ULabel(uid='joRCMMWX'), ULabel(uid='1KPobNqK'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='tpZAX7uyvPffzLrh0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('Lm6I4XXI') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='Aj8KGwbh'), ULabel(uid='EgihgpJC'), ULabel(uid='JIbWVXma'), ULabel(uid='CrR7fgIZ'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='Lm6I4XXILNEimfNA0000')\n",
+      "\u001b[92m→\u001b[0m completing transfer to track Artifact('NUBc9HtY') as input\n",
+      "\u001b[92m→\u001b[0m returning existing schema with same hash: Schema(uid='PUwajeoyOFo5TGdoSlPw', name='single-cell image dataset schema obs', n=1, itype='Feature', is_type=False, hash='1j9UbOOFnijksoThNUnoeg', minimal_set=True, ordered_set=False, maximal_set=False, space_id=1, created_by_id=1, run_id=3, created_at=2025-03-21 14:43:49 UTC)\n",
+      "\u001b[92m→\u001b[0m mapped records: ULabel(uid='Aj8KGwbh'), ULabel(uid='EgihgpJC'), ULabel(uid='JIbWVXma'), ULabel(uid='1KPobNqK'), ULabel(uid='QrU6fxsG'), ULabel(uid='xhpmj7p7'), ULabel(uid='xHqZKcIG'), ULabel(uid='JWE2jNdk'), ULabel(uid='PKiCEP1h'), ULabel(uid='HRRTqARL'), ULabel(uid='e82fx2wm')\n",
+      "\u001b[92m→\u001b[0m transferred records: Artifact(uid='NUBc9HtYPuHAnUwA0000')\n"
+     ]
+    }
+   ],
    "source": [
     "# Process KO cells to see if they behave differently\n",
     "ko_cells_afs = sc_datasets.filter(ulabels__name=\"EI24KO\")\n",
@@ -204,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "11",
    "metadata": {},
    "outputs": [],
@@ -227,10 +315,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[94m•\u001b[0m please hit CMD + s to save the notebook in your editor .. \u001b[92m✓\u001b[0m\n",
+      "\u001b[92m→\u001b[0m finished Run('gSKgBwi2') after 33s at 2025-03-21 14:45:02 UTC\n"
+     ]
+    }
+   ],
    "source": [
     "ln.finish()"
    ]
@@ -243,7 +340,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "lamin",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
