--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# !pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage ./analysis-flow --schema bionty"
+    "!lamin init --storage ./analysis-flow --modules bionty"
    ]
   },
   {
