--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# !pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage test-bulkrna --schema bionty"
+    "!lamin init --storage test-bulkrna --modules bionty"
    ]
   },
   {
