--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "# !pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage ./test-facs --schema bionty"
+    "!lamin init --storage ./test-facs --modules bionty"
    ]
   },
   {
