--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "# !pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage ./use-cases-registries --schema bionty"
+    "!lamin init --storage ./use-cases-registries --modules bionty"
    ]
   },
   {
