--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# !pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage ./test-spatial --schema bionty"
+    "!lamin init --storage ./test-spatial --modules bionty"
    ]
   },
   {
