--- a/docs/imaging.ipynb
+++ b/docs/imaging.ipynb
@@ -247,9 +247,10 @@
     "# loop through all artifacts and add feature values\n",
     "artifacts = []\n",
     "for _, row in metadata_files.iterrows():\n",
-    "    artifact = ln.Artifact(\n",
-    "        row[\"image_path\"],\n",
-    "        description=\"raw image of U2OS cells stained for autophagy markers\",\n",
+    "    artifact = (\n",
+    "        ln.Artifact.using(\"scportrait/examples\")\n",
+    "        .filter(key__icontains=row[\"image_path\"])\n",
+    "        .one()\n",
     "    )\n",
     "    artifact.save()\n",
     "    artifact.cell_lines.add(bt.CellLine.filter(name=row.cell_line).one())\n",
