--- a/docs/imaging.ipynb
+++ b/docs/imaging.ipynb
@@ -376,7 +376,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "lamin",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
@@ -390,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
