🎨 Fix scportrait version
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -118,7 +118,7 @@
     "class_lookup = {\"untreated\": 0, \"14h Torin-1\": 1}\n",
     "\n",
     "features = None\n",
-    "for _ix, condition_ul in enumerate(condition_uls):\n",
+    "for _, condition_ul in enumerate(condition_uls):\n",
     "    cells = wt_cells_afs.filter(ulabels=condition_ul)\n",
     "    results = featurize_datasets(cells)\n",
     "\n",
@@ -177,31 +177,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# debug\n",
-    "print(\"DEBUGGING\")\n",
-    "ko_cells_afs = sc_datasets.filter(ulabels__name=\"EI24KO\")\n",
-    "print(ko_cells_afs)\n",
-    "condition_uls = [\n",
-    "    ln.ULabel.using(\"scportrait/examples\").get(name=stimulation_name)\n",
-    "    for stimulation_name in {\n",
-    "        af.features.get_values()[\"stimulation\"] for af in ko_cells_afs\n",
-    "    }\n",
-    "]\n",
-    "print(condition_uls)\n",
-    "for stimulation_name in {\n",
-    "    af.features.get_values()[\"stimulation\"] for af in ko_cells_afs\n",
-    "}:\n",
-    "    print(stimulation_name)\n",
-    "print(\"DEBUGGINGEND\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Process KO cells to see if they behave differently\n",
     "ko_cells_afs = sc_datasets.filter(ulabels__name=\"EI24KO\")\n",
     "\n",
@@ -230,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
