--- a/docs/imaging2.ipynb
+++ b/docs/imaging2.ipynb
@@ -331,7 +331,7 @@
     "obs_schema = ln.Schema(\n",
     "    name=\"single-cell image dataset schema obs\",\n",
     "    features=[\n",
-    "        ln.Feature(name=\"scportrait_cell_id\", dtype=\"int\", coerce_dtype=True).save(),\n",
+    "        ln.Feature(name=\"cell_id\", dtype=\"int\", coerce_dtype=True).save(),\n",
     "    ],\n",
     ").save()\n",
     "\n",
@@ -553,7 +553,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "lamin",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
@@ -567,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
