--- a/docs/imaging2.ipynb
+++ b/docs/imaging2.ipynb
@@ -331,7 +331,7 @@
     "obs_schema = ln.Schema(\n",
     "    name=\"single-cell image dataset schema obs\",\n",
     "    features=[\n",
-    "        ln.Feature(name=\"cell_id\", dtype=\"int\", coerce_dtype=True).save(),\n",
+    "        ln.Feature(name=\"scportrait_cell_id\", dtype=\"int\", coerce_dtype=True).save(),\n",
     "    ],\n",
     ").save()\n",
     "\n",
